[tool.poetry]
name = "leak"
version = "1.2.0"
description = "Show release information about packages on PyPI"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
rich = "^11.2.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
