[tool.poetry]
name = "leak"
version = "1.6.0"
description = "Show release information about packages on PyPI"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bmwant/leak"
keywords = ["pypi", "package", "info", "cli", "utility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Unix Shell"
]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.2.0"
requests = "^2.27.1"
click = "^8.0.4"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
tox = "^3.24.5"
flake8 = "^4.0.1"

[tool.poetry.scripts]
leak = 'leak.cli:cli'

[tool.poetry.urls]
"Blog post" = "https://bmwlog.pp.ua/leak-package/"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
