[project]
name = "leak"
version = "2.2.1"
description = "Show release information about packages on PyPI"
authors = [
  { name = "Misha Behersky", email = "bmwant@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["pypi", "package", "info", "cli", "utility"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving :: Packaging",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Unix Shell",
]
requires-python = ">=3.9"
dependencies = [
  "pydantic (>=2.11.5,<3.0.0)",
  "rich (>=14.0.0,<15.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "click (>=8.1.8,<8.2) ; python_version < \"3.10\"",
  "click (>=8.2.1,<9.0.0) ; python_version >= \"3.10\"",
  "packaging (>=25.0,<26.0)",
  "pydantic-settings (>=2.9.1,<3.0.0)",
]

[project.urls]
Homepage = "https://bmwant.link/leak-package/"
Repository = "https://github.com/bmwant/leak"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
tox = "^4.26.0"
ruff = "^0.11.12"
pytest-env = "^1.1.5"

[tool.ruff.lint]
extend-select = [
  # isort
  "I",
]

[tool.pytest_env]
LEAK_SHOW_DOWNLOADS = true
LEAK_API_KEY = ""

[project.scripts]
leak = "leak.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
